app/node/mainnet/patch-kaspad.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kaspad
  namespace: kaspa
spec:
  serviceName: prod-kaspad
  selector:
    matchLabels:
      app: prod-kaspad
  template:
    metadata:
      labels:
        app: prod-kaspad
    spec:
      containers:
        - name: kaspad
          ports:
            - name: rpc
              containerPort: 16110
              protocol: TCP
            - name: wrpc-borsh
              containerPort: 17110
              protocol: TCP
            - name: wrpc-json
              containerPort: 18112
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: 16110
            periodSeconds: 10
            failureThreshold: 60
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 350Gi
---
apiVersion: v1
kind: Service
metadata:
  name: kaspad
  namespace: kaspa
  labels:
    app: prod-kaspad
spec:
  $patch: replace
  clusterIP: None
  selector:
    app: prod-kaspad
  ports:
    - name: rpc
      port: 16110
      targetPort: rpc
      protocol: TCP
    - name: wrpc-borsh
      port: 17110
      targetPort: 17110
      protocol: TCP
    - name: wrpc-json
      port: 18112
      targetPort: 18112
      protocol: TCP
